<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ticket_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/menu_title_history"
        app:showAsAction="always"/>
</menu>